# gradio_highlightedtextbox

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/gradio_highlightedtextbox/: __init__.py  highlightedtextbox.py  highlightedtextbox.pyi
backend/gradio_highlightedtextbox/templates/component/: index.js  style.css
backend/gradio_highlightedtextbox/templates/example/: index.js
demo/: app.py  space.py
frontend/: BlockTitleWithHighlights.svelte  Copy.svelte  HighlightedTextbox.svelte  Index.svelte  RemoveTags.svelte  Widgets.svelte  package-lock.json  package.json  utils.ts
