[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_highlightedtextbox"
version = "0.0.13"
description = "Editable Gradio textarea supporting highlighting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Gabriele Sarti", email = "gabriele.sarti996@gmail.com" }]
keywords = ["gradio-custom-component", "gradio-template-SimpleTextbox", "highlight", "textbox", "editing", "color"]
# Add dependencies here
dependencies = ["gradio>=4.0,<5.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
space = "https://huggingface.co/spaces/gsarti/gradio_highlightedtextbox"

[tool.hatch.build]
artifacts = ["backend/gradio_highlightedtextbox/templates", "backend/gradio_highlightedtextbox/templates", "/backend/gradio_highlightedtextbox/templates"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_highlightedtextbox"]
